--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "oppgave3",
+  "homepage":"https://simmoe.github.io/oppgave3/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",    
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
